--- a/.gitgub/workflows/main.yml
+++ b/.gitgub/workflows/main.yml
@@ -1,19 +1,15 @@
-# This is a basic workflow to help you get started with Actions
+
 
 name: Readme Update
 
-# Controls when the workflow will run
 on:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-  # 1시간에 한번씩 아래 스크립트를 실행한다.
   schedule:
-    - cron: "0 */1 * * *"
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+    - cron: "0 0 * * *"
 jobs:
-  # This workflow contains a single job called "build"
   build:
     runs-on: ubuntu-latest
     steps:
@@ -38,8 +34,8 @@ jobs:
       - name: Commit README
         if: steps.verify_diff.outputs.changed == 'true'
         run: |
-          git config --local user.email "본인의 Github 이메일"
-          git config --local user.name "본인의 Github 이름"
+          git config --local user.email "chaeding22@gmail.com"
+          git config --local user.name "dbchae22"
           git add .
           git commit -m "Update README.md"
           git push origin main
